Removed navbar margin to fix overflow issue.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,7 +27,6 @@ body {
 /* Customisation of navbar background and margin for improved layout. */
 .navbar {
     background-color: #1b1b1b;
-    margin-bottom: 2rem;
 }
 
 #formHeading {
